<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ah_ros_bridge_example</name>
  <version>0.0.0</version>
  <description>
    An example of ROS connector for Arrowhead Framework.
  </description>

  <maintainer email="klapajar@fel.cvut.cz">Jaroslav Klapálek</maintainer>

  <license>GPLv3</license>

  <author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

  <url type="repository">https://github.com/jara001/ah-ros-bridge-example</url>

  <!-- Build tool. For ROS1 leave this here. -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <!-- Packages dependencies. -->
  <exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rclpy</exec_depend>

  <exec_depend version_gte="0.4.1">autopsy</exec_depend>
  <exec_depend>python-websocket-client</exec_depend>
  <exec_depend version_gte="0.2.0">aclpy</exec_depend>

  <!-- Any other parameters can be stored here. -->
  <export>
    <index url="git@github.com/jara001/ah-ros-bridge-example.git" />

    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>

</package>
